# MCP

./: .gitattributes  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: implement.md  review.md
Literature_review/: README.md  litreturereview.pptx  litreturereview_new.pptx  mcp_server_attack_taxonomy_v2_agent_boundary.md  mcp_server_cve_catalog.md  md_to_pdf.py  related_work_gap_matrix.md  risk_scoring_frameworks_survey.md
Literature_review/attacks/: mcp_attacks_cheatsheet.md  mcp_server_attacks_v3.md  mcp_server_attacks_v3_reduced_styled.md  mcp_server_attacks_v3_reduced_styled_1.md  mcp_server_taxonomy_v5_reviewed.md
Literature_review/benchmark/: mcp_server_attack_taxonomy.md  mcp_server_taxonomy_clean.md
Literature_review/excels/: README.md  (+1 more)
Litereture_review/: README.md  TomerOvadya.pptx  alternative_thesis_direction.md  client_server_attack_dimension_framework.md  compass_artifact_wf-bf161ccd-968d-4fbb-bb88-49ae0f9c53f6_text_markdown.md  concepts_and_papers_summary.md  datasets_review.docx  datasets_review.md  dimension_refinement_analysis.md  dimension_refinement_v2_agent_boundary.md  dimension_refinement_v3_server_defense.md  final_report_datasets_dimensions_idea.md  generate_reviews.py  meeting_pitch_practical.md  thesis_research_plan.md
_archive/: cleanup_2026-04-14.md
docs/: README.md
mcp_learning_lab/: README.md  agent.py  filesystem_server.py  official_vs_custom_servers.md
scripts/: install_cleanup_task.ps1  weekly_cleanup.py
tests/: README.md  test_smoke.py  test_weekly_cleanup.py
(+345 files in other folders)
